DevOps/App/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: hackathonParis
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
